<resources>

    <string name="next_day">1日進める</string>
    <string name="three_days_pass">3日進める</string>
    <string name="ten_days_pass">10日進める</string>

    <string name="app_name">Vocabu.</string>
    <string name="menu_settings">設定</string>
    <string name="learning_mode">学習モード</string>
    <string name="revise_mode">復習モード</string>
    <string name="register_mode">単語の登録</string>
    <string name="check_mode">登録語の確認</string>
     <string name="notebook_mode">練習帳</string>
    <string name="spell">スペル</string>
    <string name="meaning">意味</string>
    <string name="part">品詞</string>
    <string name="example_en">例文</string>
    <string name="example_ja">和訳</string>
    <string name="category">カテゴリ</string>
    <string name="register">登録</string>
    <string name="update">修正</string>
    <string name="delete">削除</string>
    <string name="cancel">キャンセル</string>
    <string name="search">検索</string>
    <string name="progress_search">検索中</string>
    <string name="progress_create">作成中</string>
	<string name="list_words">登録語一覧</string>
    <string name="category_mode">テーマ検索</string>
    <string name="keyword_mode">キーワード検索</string>
    <string name="new_words">新規語一覧</string>
    <string name="all_category">全て</string>
    <string name="learning_start">開始</string>
    <string name="note_desc">発音</string>
    <string name="skip_button">Skip</string>
    <string name="right_answer">○</string>
    <string name="wrong_answer">×</string>
    <string name="title_activity_wrong_list">学習結果</string>
    <string name="result">学習結果</string>
    <string name="result_right">正解</string>
    <string name="result_wrong">不正解</string>
    <string name="finish_button">終了</string>
    <string name="revise_mode_select">復習モード</string>
    <string name="words_mode_select">単語モード</string>
    <string name="sentence_mode_select">例文モード</string>
    <string name="learning_q3_mode">三択モード</string>
    <string name="learning_q3_mode_desc">三択形式で学習を行います</string>
    <string name="learning_q4_mode">四択モード</string>
    <string name="learning_q4_mode_desc">四択形式で学習を行います</string>
    <string name="learning_hide_mode">想起モード</string>
    <string name="learning_hide_mode_desc">意味を隠す形式で学習を行います</string>
    <string name="learning_hide_mode_desc2">スペルを隠す形式で学習を行います</string>
    <string name="revise_show_answer">解答を見る</string>
    <string name="revise_right">正解した</string>
    <string name="revise_wrong">間違えた</string>
    <string name="db_name">データベース名</string>
    <string name="data_filename">データファイル</string>
    <string name="file_choose">▼</string>
    <string name="delete_file_desc">DB作成後，csvファイル削除</string>
    <string name="create_db">DB作成</string>
    <string name="lang_us">英語（米）</string>
    <string name="lang_english">英語（英）</string>
    <string name="lang_french">フランス語</string>
    <string name="lang_german">ドイツ語</string>
    <string name="lang_italian">イタリア語</string>
    <string name="standard">標準</string>
    <string name="low">低い</string>
    <string name="high">高い</string>
    <string name="slow">遅い</string>
    <string name="slightly_slow">やや遅い</string>
    <string name="slightly_fast">やや速い</string>
    <string name="fast">速い</string>
    <string name="learning_setting_title">学習設定</string>
    <string name="learning_setting_summary">学習に関する設定を行います</string>
    <string name="learning_mode_setting_title">学習モードの設定</string>
    <string name="learning_mode_choice_title">学習形式の設定</string>
    <string name="learning_mode_choice_summary">学習モードにおける出題形式の設定を行います</string>
    <string name="revise_mode_choice_title">復習形式の設定</string>
    <string name="revise_mode_choice_summary">復習モードにおける出題形式の設定を行います</string>
    <string name="not_all">通常モード</string>
    <string name="all">演習モード</string>
    <string name="new_words_num">新規語出題数</string>
    <string name="rev_words_max">復習語最大数</string>
    <string name="learning_general_setting_title">学習全般の設定</string>
    <string name="res_pop_title">○/×ポップ時間</string>
    <string name="del_learning_data_title">学習情報の削除</string>
    <string name="del_learning_data_summary">現在までの学習情報を削除します</string>
    <string name="db_setting_title">データベース設定</string>
    <string name="db_setting_summary">データベースの作成や変更を行います</string>
    <string name="db_create_title">データベース作成</string>
    <string name="db_create_summary">csvファイルからデータベースを作成します</string>
    <string name="db_change_title">データベース変更</string>
    <string name="db_delete_title">データベース削除</string>
    <string name="db_delete_summary">選択されたdbファイルを削除します</string>
    <string name="words_setting_title">用語設定</string>
    <string name="words_setting_summary">登録画面の用語の設定を行います</string>
    <string name="words_set_default">デフォルトに戻す</string>
    <string name="sound_setting_title">サウンド設定</string>
    <string name="sound_setting_summary">効果音やTTSに関する設定を行います</string>
    <string name="sound_use_title">効果音を鳴らす</string>
    <string name="sound_use_summary_on">正解/不正解時に効果音を鳴らします</string>
    <string name="sound_use_summary_off">正解/不正解時に効果音を鳴らしません</string>
    <string name="tts_use_title">TTSを使用する</string>
    <string name="tts_use_summary_on">音声読み上げ機能を使用します</string>
    <string name="tts_use_summary_off">音声読み上げ機能を使用しません</string>
    <string name="tts_locale_title">TTS：言語</string>
    <string name="tts_rate_title">TTS：速さ</string>
    <string name="tts_pitch_title">TTS：ピッチ</string>
    <string name="tts_install_title">TTSデータのインストール</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="confirm">確認</string>
    <string name="choice_file">ファイル選択</string>
    <string name="confirm_tts_install">発音機能を利用するのに必要な音声データがインストールされていません\nGoogle Playでダウンロードしますか？</string>
    <string name="confirm_delete">本当に削除しますか？</string>
    <string name="confirm_db_delete">データベースがすでに存在しています\n削除してもよろしいですか？</string>
    <string name="confirm_learning_data_delete">現在のデータベースにおける学習情報を削除してもよろしいですか？</string>
    <string name="word_registered">単語を登録しました</string>
    <string name="word_updated">単語を修正しました</string>
    <string name="word_deleted">単語を削除しました</string>
    <string name="db_create_success">データベースを作成しました</string>
    <string name="db_create_fail">データベースの作成に失敗しました</string>
    <string name="db_deleted">データベースを削除しました</string>
    <string name="db_delete_fail">現在設定されているデータベースは削除できません</string>
    <string name="learning_data_deleted">学習情報を削除しました</string>
    <string name="title_activity_main">Vocabu.</string>
    <string name="title_activity_register">単語の登録</string>
    <string name="title_activity_word_list">単語の確認</string>
    <string name="title_activity_learning_list">新規語学習</string>
    <string name="title_activity_question4">四択問題</string>
    <string name="title_activity_setting">設定</string>
    <string name="title_activity_revise_select">復習モード選択</string>
    <string name="title_activity_db_create">データベース作成</string>
    <string name="title_activity_meaning_hide_question">想起式復習</string>
    <string name="title_activity_question3">三択問題</string>
    <string name="word_mode">単語モード</string>
    <string name="sentence_mode">例文モード</string>
    <string name="bookmark_on">ON</string>
    <string name="bookmark_off">OFF</string>
    <string name="bookmark_mode">しおり確認</string>
    <string name="all_bookmark">全て</string>
    <string name="title_activity_notebook">練習帳</string>
    
</resources>