<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

    <ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1" >
	    <LinearLayout
	        android:orientation="vertical"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="4dip"
		    android:paddingLeft="12dip"
		    android:paddingRight="12dip" >
		    <TextView
		        android:id="@+id/word_spell"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/spell" />
		    <EditText
		        android:id="@+id/spell_edit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text" />
		    <TextView
		        android:id="@+id/word_meaning"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/meaning" />
		    <EditText
		        android:id="@+id/meaning_edit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text" />
		    <TextView
		        android:id="@+id/word_part"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/part" />
		    <Spinner
		        android:id="@+id/part_spinner"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
		    <TextView
		        android:id="@+id/word_example_en"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/example_en" />
		    <EditText
		        android:id="@+id/example_en_edit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text" />
		    <TextView
		        android:id="@+id/word_example_ja"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/example_ja" />
		    <EditText
		        android:id="@+id/example_ja_edit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text" />
		    <TextView
		        android:id="@+id/word_category"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/category" />
		    <Spinner
		        android:id="@+id/category_spinner"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
		</LinearLayout>
	</ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dip"
        android:gravity="center"
        android:background="@color/title_background" >
	    <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/button"
            android:textColor="@color/button_text_color"
            android:text="@string/register" />
	    <Button
            android:id="@+id/finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/button"
            android:textColor="@color/button_text_color"
            android:text="@string/finish_button" />
   	</LinearLayout>

</LinearLayout>
