<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

    <ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1" >
	    <LinearLayout
	        android:orientation="vertical"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="4dip"
		    android:paddingLeft="12dip"
		    android:paddingRight="12dip" >

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/db_name" />
		    <EditText
		        android:id="@+id/name_edit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text" />

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/data_filename" />
		    <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >
		        <Button
		            android:id="@+id/data_file_search_button"
		            android:layout_width="40dip"
		            android:layout_height="wrap_content"
		            android:layout_centerVertical="true"
		            android:layout_alignParentRight="true"
		            android:text="@string/file_choose" />
		        <EditText
			        android:id="@+id/data_file_edit"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_centerVertical="true"
		            android:layout_toLeftOf="@id/data_file_search_button"
			        android:inputType="text"
			        android:singleLine="true" />
		    </RelativeLayout>

		    <CheckBox
		        android:id="@+id/delete_check"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColorLink="@color/attention_color"
		        android:text="@string/delete_file_desc"
		        android:checked="false" />
		</LinearLayout>
	</ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dip"
        android:gravity="center"
        android:background="@color/title_background" >
        <Button
            android:id="@+id/db_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/button"
            android:textColor="@color/button_text_color"
            android:text="@string/create_db" />
        <Button
            android:id="@+id/finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/button"
            android:textColor="@color/button_text_color"
            android:text="@string/finish_button" />
   	</LinearLayout>

</LinearLayout>
