<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_background" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dip"
            android:layout_marginBottom="12dip"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="10dip"
            android:text="@string/revise_mode_select"
            android:textSize="@dimen/large" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <Button
	            android:id="@+id/word_intent_button"
	            android:layout_width="180dip"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true"
	            android:layout_marginTop="32dp"
	            android:background="@drawable/button"
	            android:text="@string/word_mode"
	            android:textColor="@color/button_text_color" />

	        <Button
	            android:id="@+id/sentence_intent_button"
	            android:layout_width="180dip"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/word_intent_button"
	            android:layout_centerHorizontal="true"
	            android:layout_marginTop="32dp"
	            android:background="@drawable/button"
	            android:text="@string/sentence_mode"
	            android:textColor="@color/button_text_color" />

	    </RelativeLayout>
	</ScrollView>

</LinearLayout>
