<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/title_background" >

	    <LinearLayout
	        android:id="@+id/first_show_layout"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center" >
	        <Button
	            android:id="@+id/answer_open_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="10dip"
	            android:background="@drawable/button"
	            android:textColor="@color/button_text_color"
	            android:text="@string/revise_show_answer" />
	    </LinearLayout>
	    <LinearLayout
	        android:id="@+id/second_show_layout"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:visibility="invisible" >
	        <Button
	            android:id="@+id/right_button"
	            android:minWidth="64dip"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="10dip"
	            android:background="@drawable/button"
	            android:textColor="@color/button_text_color"
	            android:text="@string/revise_right" />
	        <Button
	            android:id="@+id/wrong_button"
	            android:minWidth="64dip"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="10dip"
	            android:background="@drawable/button"
	            android:textColor="@color/button_text_color"
	            android:text="@string/revise_wrong" />
	    </LinearLayout>
	</FrameLayout>

    <LinearLayout
        android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_above="@id/bottom_layout" >
	    <TextView
	        android:id="@+id/question_word"
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1.0"
	        android:gravity="center"
	        android:textSize="@dimen/very_large"
	        android:background="@color/title_background" />
	    <TextView
	        android:id="@+id/answer"
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1.2"
	        android:gravity="center"
	        android:textSize="@dimen/very_large" />
    </LinearLayout>

</RelativeLayout>
